// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generated Code Snapshots > should match snapshot for complex real-world scenario 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_ILogger_b37e3d0c(container: NeoContainer) {
  return new Import_0.ConsoleLogger();
}

function create_IDatabase_b37e3d0c(container: NeoContainer) {
  return new Import_0.PostgresDB(container.resolve("ILogger_b37e3d0c"));
}

function create_ICache_b37e3d0c(container: NeoContainer) {
  return new Import_0.RedisCache(container.resolve("ILogger_b37e3d0c"));
}

function create_UserRepository_b37e3d0c(container: NeoContainer) {
  return new Import_0.UserRepository(container.resolve("IDatabase_b37e3d0c"), container.resolve("ICache_b37e3d0c"));
}

function create_UserService_b37e3d0c(container: NeoContainer) {
  return new Import_0.UserService(container.resolve(Import_0.UserRepository), container.resolve("ILogger_b37e3d0c"));
}

function create_AuthService_b37e3d0c(container: NeoContainer) {
  return new Import_0.AuthService(container.resolve(Import_0.UserService), container.resolve("ILogger_b37e3d0c"));
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === "ILogger_b37e3d0c") { 
            if (!this.instances.has("ILogger_b37e3d0c")) {
                const instance = create_ILogger_b37e3d0c(this);
                this.instances.set("ILogger_b37e3d0c", instance);
                return instance;
            }
            return this.instances.get("ILogger_b37e3d0c");
           }
    if (token === "IDatabase_b37e3d0c") { 
            if (!this.instances.has("IDatabase_b37e3d0c")) {
                const instance = create_IDatabase_b37e3d0c(this);
                this.instances.set("IDatabase_b37e3d0c", instance);
                return instance;
            }
            return this.instances.get("IDatabase_b37e3d0c");
           }
    if (token === "ICache_b37e3d0c") { 
            if (!this.instances.has("ICache_b37e3d0c")) {
                const instance = create_ICache_b37e3d0c(this);
                this.instances.set("ICache_b37e3d0c", instance);
                return instance;
            }
            return this.instances.get("ICache_b37e3d0c");
           }
    if (token === Import_0.UserRepository) { 
            if (!this.instances.has(Import_0.UserRepository)) {
                const instance = create_UserRepository_b37e3d0c(this);
                this.instances.set(Import_0.UserRepository, instance);
                return instance;
            }
            return this.instances.get(Import_0.UserRepository);
           }
    if (token === Import_0.UserService) { 
            if (!this.instances.has(Import_0.UserService)) {
                const instance = create_UserService_b37e3d0c(this);
                this.instances.set(Import_0.UserService, instance);
                return instance;
            }
            return this.instances.get(Import_0.UserService);
           }
    if (token === Import_0.AuthService) { 
            if (!this.instances.has(Import_0.AuthService)) {
                const instance = create_AuthService_b37e3d0c(this);
                this.instances.set(Import_0.AuthService, instance);
                return instance;
            }
            return this.instances.get(Import_0.AuthService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["ILogger_b37e3d0c","IDatabase_b37e3d0c","ICache_b37e3d0c","UserRepository_b37e3d0c","UserService_b37e3d0c","AuthService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'RealWorldApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for interface tokens 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_ILogger_b37e3d0c(container: NeoContainer) {
  return new Import_0.ConsoleLogger();
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === "ILogger_b37e3d0c") { 
            if (!this.instances.has("ILogger_b37e3d0c")) {
                const instance = create_ILogger_b37e3d0c(this);
                this.instances.set("ILogger_b37e3d0c", instance);
                return instance;
            }
            return this.instances.get("ILogger_b37e3d0c");
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["ILogger_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'InterfaceApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for legacy container 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_NewService_b37e3d0c(container: NeoContainer) {
  return new Import_0.NewService(undefined);
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === Import_0.NewService) { 
            if (!this.instances.has(Import_0.NewService)) {
                const instance = create_NewService_b37e3d0c(this);
                this.instances.set(Import_0.NewService, instance);
                return instance;
            }
            return this.instances.get(Import_0.NewService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["NewService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, [legacy], 'LegacyApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for mixed scopes 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_SingletonService_b37e3d0c(container: NeoContainer) {
  return new Import_0.SingletonService();
}

function create_TransientService_b37e3d0c(container: NeoContainer) {
  return new Import_0.TransientService();
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === Import_0.SingletonService) { 
            if (!this.instances.has(Import_0.SingletonService)) {
                const instance = create_SingletonService_b37e3d0c(this);
                this.instances.set(Import_0.SingletonService, instance);
                return instance;
            }
            return this.instances.get(Import_0.SingletonService);
           }
    if (token === Import_0.TransientService) { return create_TransientService_b37e3d0c(this); }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["SingletonService_b37e3d0c","TransientService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'ScopesApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for parent container 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_AppService_b37e3d0c(container: NeoContainer) {
  return new Import_0.AppService();
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === Import_0.AppService) { 
            if (!this.instances.has(Import_0.AppService)) {
                const instance = create_AppService_b37e3d0c(this);
                this.instances.set(Import_0.AppService, instance);
                return instance;
            }
            return this.instances.get(Import_0.AppService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["AppService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, [parent], 'ChildApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for property tokens 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_PropertyToken_ApiService_apiUrl(container: NeoContainer) {
  const userFactory = () => 'http://localhost';
  return userFactory(container);
}

function create_ApiService_b37e3d0c(container: NeoContainer) {
  return new Import_0.ApiService(undefined);
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === "PropertyToken:ApiService.apiUrl") { 
            if (!this.instances.has("PropertyToken:ApiService.apiUrl")) {
                const instance = create_PropertyToken_ApiService_apiUrl(this);
                this.instances.set("PropertyToken:ApiService.apiUrl", instance);
                return instance;
            }
            return this.instances.get("PropertyToken:ApiService.apiUrl");
           }
    if (token === Import_0.ApiService) { 
            if (!this.instances.has(Import_0.ApiService)) {
                const instance = create_ApiService_b37e3d0c(this);
                this.instances.set(Import_0.ApiService, instance);
                return instance;
            }
            return this.instances.get(Import_0.ApiService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["PropertyToken:ApiService.apiUrl","ApiService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'PropertyApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for service with dependencies 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_Logger_b37e3d0c(container: NeoContainer) {
  return new Import_0.Logger();
}

function create_UserService_b37e3d0c(container: NeoContainer) {
  return new Import_0.UserService(container.resolve(Import_0.Logger));
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === Import_0.Logger) { 
            if (!this.instances.has(Import_0.Logger)) {
                const instance = create_Logger_b37e3d0c(this);
                this.instances.set(Import_0.Logger, instance);
                return instance;
            }
            return this.instances.get(Import_0.Logger);
           }
    if (token === Import_0.UserService) { 
            if (!this.instances.has(Import_0.UserService)) {
                const instance = create_UserService_b37e3d0c(this);
                this.instances.set(Import_0.UserService, instance);
                return instance;
            }
            return this.instances.get(Import_0.UserService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["Logger_b37e3d0c","UserService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'UserApp');
"
`;

exports[`Generated Code Snapshots > should match snapshot for simple service 1`] = `
"
import * as Import_0 from 'snapshot-test.ts';

// -- Factories --

function create_SimpleService_b37e3d0c(container: NeoContainer) {
  return new Import_0.SimpleService();
}

// -- Container --
export class NeoContainer {
  private instances = new Map<any, any>();

  constructor(
    private parent?: any,
    private legacy?: any[],
    private name: string = 'NeoContainer'
  ) {}

  public resolve(token: any): any {
    // 1. Try to resolve locally (or create if singleton)
    const result = this.resolveLocal(token);
    if (result !== undefined) return result;

    // 2. Delegate to parent
    if (this.parent) {
        try {
            return this.parent.resolve(token);
        } catch (e) {
            // Ignore error, try legacy
        }
    }

    // 3. Delegate to legacy
    if (this.legacy) {
        for (const legacyContainer of this.legacy) {
            // Assume legacy container has resolve()
            try {
                if (legacyContainer.resolve) return legacyContainer.resolve(token);
            } catch (e) {
                // Ignore
            }
        }
    }

    throw new Error(\`[\${this.name}] Service not found or token not registered: \${token}\`);
  }

  private resolveLocal(token: any): any {
    if (token === Import_0.SimpleService) { 
            if (!this.instances.has(Import_0.SimpleService)) {
                const instance = create_SimpleService_b37e3d0c(this);
                this.instances.set(Import_0.SimpleService, instance);
                return instance;
            }
            return this.instances.get(Import_0.SimpleService);
           }
    return undefined;
  }

  public createChildContainer(): NeoContainer {
    return new NeoContainer(this, \`Child of \${this.name}\`);
  }

  // For debugging/inspection
  public get _graph() {
    return ["SimpleService_b37e3d0c"];
  }
}

// -- Container Instance --
export const c = new NeoContainer(undefined, undefined, 'SimpleApp');
"
`;
